syntax = "proto3";

import "google/api/annotations.proto"; 
//import "google/api/timestamp.proto";

package pb;

message Trade {
	int64 id = 1;
	int64 time = 2;
	int64 char1id = 3;
	int64 char1pp = 4;
	int64 char1gp = 5;
	int64 char1sp = 6;
	int64 char1cp = 7;
	int64 char1items = 8;
	int64 char2id = 9;
	int64 char2pp = 10;
	int64 char2gp = 11;
	int64 char2sp = 12;
	int64 char2cp = 13;
	int64 char2items = 14;
}
